--- a/index.ipynb
+++ b/index.ipynb
@@ -62,11 +62,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['palermo',\n",
+       " 'palermo',\n",
+       " 'Palermo',\n",
+       " 'Ricoleta',\n",
+       " 'Santelmo',\n",
+       " 'Puerto Madero',\n",
+       " 'Belgrano',\n",
+       " 'La Boca']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "palermo = neighborhoods.insert(0,\"palermo\")"
+    "palermo = neighborhoods.insert(0,\"palermo\")\n",
+    "neighborhoods"
    ]
   },
   {
