automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -84,7 +84,7 @@
     }
    ],
    "source": [
-    "palermo = neighborhoods.insert(0,\"palermo\")\n",
+    "palermo = none\n",
     "neighborhoods"
    ]
   },
