--- a/index.ipynb
+++ b/index.ipynb
@@ -94,7 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca = neighborhoods.index()"
+    "la_boca = neighborhoods.inde"
    ]
   },
   {
