--- a/index.ipynb
+++ b/index.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ba_latitude = None"
+    "ba_latitude = No"
    ]
   },
   {
