--- a/index.ipynb
+++ b/index.ipynb
@@ -497,11 +497,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "recoleta_marker =mar"
+    "recoleta_marker =marker_two"
    ]
   },
   {
